# zigbridge

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  README_demo.md  README_interfaces.md  README_ipc.md  TODO.md  meson.build
config/: config.ini.sample  config_sample.ini
doc/: README.md  architecture.c.odp  coding_rules.md  firmware_instructions.md  interfaces.md
doc/new_device_join/: new_device_join.plantuml
doc/touchlink/: state_machine.plantuml
firmwares/: znp.hex
include/: app.h  aps.h  conf.h  core.h  device.h  ipc.h  keys.h  mt_af.h  mt_sys.h  mt_util.h  mt_zdo.h  types.h  zcl.h  zdp.h  zha.h  zll.h
include/utils/: list.h  sm.h
scripts/: README.md  bridge.py  delete_light.py  get_light.py  set_touchlink.py
src/: app.c  aps.c  aps.h  conf.c  conf.h  core.c  core.h  device.c  ipc.c  ipc.h  keys.c  keys.h  logs.c  logs.h  main.c  mt_af.c  mt_af.h  mt_sys.c  mt_util.c  mt_zdo.c  mt_zdo.h  stdin.c  stdin.h  utils.h  zcl.h  zdp.c  zdp.h  zha.c  zha.h  zll.c  zll.h
src/devices/: device.c  device.h
src/interfaces/: http_server.c  http_server.h  interfaces.c  interfaces.h  ipc.c  ipc.h  stdin.c  stdin.h  tcp.c  tcp.h
src/mt/: mt.c  mt.h  mt_af.c  mt_af.h  mt_sys.c  mt_sys.h  mt_util.c  mt_util.h  mt_zdo.c  mt_zdo.h
src/profiles/: zdp.c  zdp.h  zha.c  zha.h  zll.c  zll.h
src/rpc/: rpc.c  rpc.h
src/utils/: action_list.c  action_list.h  crypto.c  crypto.h  list.c  sm.c  sm.h
